JumpScript/tests/baselines/reference/jmpxDynamicTagName7.errors.txt
tests/cases/conformance/jsx/app.jmpx(8,8): error TS2604: JSX element type 'this' does not have any construct or call signatures.


==== tests/cases/conformance/jsx/react.d.jump (0 errors) ====
    declare module 'react' {
    	class Component<T, U> { }
    }
    
==== tests/cases/conformance/jsx/app.jmpx (1 errors) ====
    import * as React from 'react';
    
    export class Text extends React.Component<{}, {}> {
      _tagName: string = 'div';
    
      render() {
        return (
          <this/>  // this should be an error
           ~~~~
!!! error TS2604: JSX element type 'this' does not have any construct or call signatures.
        );
      }
    }